css/style.css
body {
    box-sizing: border-box;
    text-align: center;
}

main {
    margin: 0 auto;
    display: flex;
    height: 90vh;
    min-height: 720px;
    justify-content: center;
}

#red-player {
    width: 45vw;
}

#blue-player {
    width: 45vw;
}

.board {
    position: relative;
    width: 60%;
    border: none;
}

#red-player .board {
    margin: 5% 5% auto auto;
}

#blue-player .board {
    margin: 5% auto auto 5%;
}

.board:after {
    content: "";
    display: block;
    padding-bottom: 100%;
}

.board .content {
    position: absolute;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
}

.row{
    display: flex;
    width: 100%;
    height: 10%;
}

.cell {
    width: 10%;
    position: relative;
}

.cell img {
    position: absolute;
    left:0;
    top:0;
    width: 100%;
    height: 100%;
    z-index: -1;
}

#red-player .cell {
    border: 1px solid lightcoral;
}

#blue-player .cell {
    border: 1px solid lightblue;
}

